--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 ---
 layout: default
-title: 我的Blog
+title: 中二马
 ---
 
-<h2>{{ page.title }}</h2>
+<h1>{{ page.title }}</h1>
 
-<p>最新文章</p>
+<h4 style="text-align: right;">专注于把想到的写下来，也是很难啊。</h4>
 
-<ul>
+<p>新的想法</p>
+
+<ol>
 
 {% for post in site.posts %}
 
@@ -15,4 +17,4 @@ title: 我的Blog
 
 {% endfor %}
 
-</ul>
+</ol>
