--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@ title: 中二马
 
 <h4 style="text-align: right;">专注于把想到的写下来，也是很难啊。</h4>
 
-<p>新的想法</p>
-
 <ol>
 
 {% for post in site.posts %}
 
-<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+<li style="width: auto;"><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}——————{{ post.date | date_to_string }} </a></li>
 
 {% endfor %}
 
