--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: 中二马
 
 <h4 style="text-align: right;">专注于把想到的写下来，也是很难啊。</h4>
 
-<ol>
+<ol style="width: auto;">
 
 {% for post in site.posts %}
 
